Products and About Us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,6 +23,13 @@
 
     <main class="container">
         <h1>About Us</h1>
+            <div class="aboutUs">
+                <div class="aboutUs__content">
+                    <p>Laborum Lorem et labore esse voluptate proident ipsum exercitation ea nostrud sit eiusmod in consectetur. Ex laboris in consectetur Lorem sunt fugiat sint. Esse reprehenderit nulla labore aliqua labore quis adipisicing ipsum consectetur. Consequat deserunt cupidatat laborum excepteur ut laboris labore aute duis nostrud.Dolore amet in fugiat eiusmod ex aute excepteur occaecat.</p>
+                    <p>Cupidatat ex adipisicing tempor consequat tempor. Quis in aute mollit labore. Pariatur velit id magna reprehenderit commodo ullamco laboris id eiusmod. Amet aute ea laborum magna laboris in ut quis ea culpa sint.Fugiat veniam reprehenderit quis elit cillum incididunt officia aliquip.Veniam aute deserunt incididunt aute mollit ullamco ut sit tempor.</p>
+                </div>
+                <img src="img/nosotros.jpg" alt="aboutUs image" class="aboutUs__image">
+            </div>
     </main>
 
     <footer class="footer">
