--- a/index.html
+++ b/index.html
@@ -23,6 +23,137 @@
 
     <main class="container">
         <h1>Our Products</h1>
+        <div class="grid">
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/1.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">VueJS</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/2.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">AngularJs</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/3.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">ReactJS</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/4.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">Redux</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/5.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">NodeJS</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/6.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">SASS</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/7.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">HTML5</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/8.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">GitHub</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/9.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">BulmaCSS</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/10.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">TypeScript</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/11.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">Drupal</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/12.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">JavaScript</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/13.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">GraphQL</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+            <div class="product">
+                <a href="product.html">
+                    <img class="product__image" src="img/14.jpg" alt="shirtImage">
+                    <div class="product__info">
+                        <p class="product__name">WordPress</p>
+                        <p class="product__price">$25</p>
+                    </div>
+                </a>
+            </div> <!-- end of product -->
+
+            <div class="graphic graphic--shirts"></div>
+            <div class="graphic graphic--node"></div>
+        </div>
     </main>
 
     <footer class="footer">
