About Us Completed

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,6 +32,33 @@
             </div>
     </main>
 
+    <section class="container buy">
+        <h2 class="buy__title">Why should you buy with us?</h2>
+
+        <div class="blocks">
+            <div class="block">
+                <img class="block__img" src="img/icono_1.png" alt="icon1">
+                <h3 class="block__tile">The best price</h3>
+                <p>Magna non commodo aliquip sint sit excepteur laboris velit labore quis ut et ullamco enim.</p>
+            </div> <!-- end of block -->
+            <div class="block">
+                <img class="block__img" src="img/icono_2.png" alt="icon2">
+                <h3 class="block__tile">For Devs</h3>
+                <p>Sit ipsum Lorem minim laboris elit consequat adipisicing nostrud deserunt elit.</p>
+            </div> <!-- end of block -->
+            <div class="block">
+                <img class="block__img" src="img/icono_3.png" alt="icon3">
+                <h3 class="block__tile">Free Shipping</h3>
+                <p>Proident voluptate id tempor duis laboris consectetur officia.</p>
+            </div> <!-- end of block -->
+            <div class="block">
+                <img class="block__img" src="img/icono_4.png" alt="icon4">
+                <h3 class="block__tile">The best quality</h3>
+                <p>Ex irure consectetur labore consectetur amet ea incididunt.</p>
+            </div> <!-- end of block -->
+        </div> <!-- end of blocks -->
+    </section>
+
     <footer class="footer">
         <p class="footer__text">FrontEnd Store - All rights reserved 2023</p>
     </footer>
